--- a/app/src/main/res/layout/activity_cong_trinh.xml
+++ b/app/src/main/res/layout/activity_cong_trinh.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -43,7 +42,7 @@
                     android:src="@android:drawable/ic_input_add" />
             </LinearLayout>
             <LinearLayout
-                android:id="@+id/listGV"
+                android:id="@+id/listCT"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center">
@@ -87,5 +86,4 @@
         </LinearLayout>
 
     </LinearLayout>
-
 </LinearLayout>
