--- a/app/src/main/res/layout/item_pvc.xml
+++ b/app/src/main/res/layout/item_pvc.xml
@@ -36,10 +36,12 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
         <ImageView
+            android:id="@+id/btnEdit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:src="@android:drawable/ic_menu_edit"/>
         <ImageView
+            android:id="@+id/btnDelete"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:src="@android:drawable/ic_delete"
