--- a/app/src/main/res/layout/item_dsvt.xml
+++ b/app/src/main/res/layout/item_dsvt.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:tool="http://schemas.android.com/tools"
-    android:background="#2697CA"
+    android:background="#A5DDF6"
     android:orientation="horizontal">
     <ImageView
         android:id="@+id/imHinh"
@@ -47,16 +47,10 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
         <ImageView
-            android:id="@+id/btnEdit"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
-            android:src="@android:drawable/ic_menu_edit"/>
-        <ImageView
             android:id="@+id/btnDelete"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
             android:src="@android:drawable/ic_delete"
             />
     </LinearLayout>
