--- a/app/src/main/res/layout/item_pvc.xml
+++ b/app/src/main/res/layout/item_pvc.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:tool="http://schemas.android.com/tools"
-    android:background="#2697CA"
+    android:background="#A5DDF6"
     android:orientation="horizontal">
     <LinearLayout
         android:gravity="center"
@@ -35,11 +35,6 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:orientation="vertical">
-        <ImageView
-            android:id="@+id/btnEdit"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:src="@android:drawable/ic_menu_edit"/>
         <ImageView
             android:id="@+id/btnDelete"
             android:layout_width="match_parent"
