--- a/app/src/main/res/layout/activity_phieu_van_chuyen.xml
+++ b/app/src/main/res/layout/activity_phieu_van_chuyen.xml
@@ -60,7 +60,7 @@
                     android:layout_weight="1"
                     android:padding="10dp"
                     android:text="@string/MaCT"
-                    android:textAlignment="textEnd" />
+                    android:textAlignment="textStart" />
 
                 <TextView
                     android:id="@+id/txtNgayVC"
