--- a/app/src/main/res/layout/item_thongke.xml
+++ b/app/src/main/res/layout/item_thongke.xml
@@ -12,35 +12,24 @@
         android:layout_height="match_parent"
         android:orientation="horizontal">
         <TextView
-            android:id="@+id/tvMaPVC"
+            android:id="@+id/tvMaVT"
             android:layout_margin="10dp"
             android:layout_width="50dp"
             android:layout_height="wrap_content"
             tool:text="MaPCV"/>
         <TextView
-            android:id="@+id/tvNgayVc"
+            android:id="@+id/tvTenVT"
             android:layout_margin="10dp"
-            android:layout_width="80dp"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
-            tool:text="Ngày VC"/>
+            tool:text="Ten VT"/>
         <TextView
-            android:id="@+id/tvMaCT"
+            android:id="@+id/tvSoLuong"
             android:layout_margin="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tool:text="MACT"/>
+            tool:text="SL"/>
 
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-        <ImageView
-            android:id="@+id/btnDelete"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:src="@android:drawable/ic_delete"
-            />
     </LinearLayout>
 
 </LinearLayout>
