--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,7 @@
           android:layout_height="200dp"
           android:layout_margin="10dp"
           android:layout_weight="1"
+          app:rippleColor="@color/colorBlue"
           app:cardCornerRadius="10dp"
           app:cardElevation="10dp">
 
@@ -145,7 +146,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="Chi Tiết Vận Chuyển"
+                android:text="CT Vận Chuyển"
                 android:textAllCaps="true"
 
                 android:textColor="@android:color/black"
@@ -163,9 +164,10 @@
 
 
    </LinearLayout>
+
    <LinearLayout
        android:layout_width="match_parent"
-       android:layout_height="match_parent"
+       android:layout_height="208dp"
        android:orientation="horizontal">
 
       <com.google.android.material.card.MaterialCardView
@@ -203,5 +205,24 @@
 
       </com.google.android.material.card.MaterialCardView>
 
+
    </LinearLayout>
+   <LinearLayout
+       android:layout_width="match_parent"
+       android:layout_height="match_parent"
+       android:layout_marginTop="20dp"
+       android:background="@drawable/footer_trangchu"
+       android:gravity="center"
+       android:orientation="horizontal">
+
+      <TextView
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:gravity="center"
+          android:text="NHÓM 20"
+          android:textColor="@color/black"
+          android:textSize="30dp"
+          android:textStyle="bold" />
+   </LinearLayout>
+
 </LinearLayout>
