--- a/app/src/main/res/layout/activity_sua_vattu.xml
+++ b/app/src/main/res/layout/activity_sua_vattu.xml
@@ -17,7 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="20dp"
-            android:text="Thêm VẬT TƯ"
+            android:text="SỬA VẬT TƯ"
             android:textAlignment="center"
             android:textSize="24sp"
             android:textStyle="bold"
@@ -89,7 +89,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
                 <Button
-                    android:id="@+id/btnTaoVT"
+                    android:id="@+id/btnSuaVT"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
@@ -98,7 +98,7 @@
                     android:layout_marginBottom="10dp"
                     android:backgroundTint="@color/black"
                     android:padding="15dp"
-                    android:text="Tạo Vật Tư"
+                    android:text="Sửa Vật Tư"
                     app:cornerRadius="25dp" />
             </LinearLayout>
         </LinearLayout>
