--- a/app/src/main/res/layout/item_dsvt.xml
+++ b/app/src/main/res/layout/item_dsvt.xml
@@ -47,7 +47,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
         <ImageView
-            android:id="@+id/btnDelete"
+            android:id="@+id/btnDeleteVT"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center"
