--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
+    <color name="purple_200">#97DFFF</color>
+    <color name="purple_500">#97DFFF</color>
+    <color name="purple_700">#97DFFF</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
@@ -15,4 +15,5 @@
     <color name="edit_text_color">#DADADA</color>
     <color name="text_color">#95AFD1</color>
     <color name="mainTextColor">#453ec1</color>
+    <color name="colorBlue">#97DFFF</color>
 </resources>
