--- a/app/src/main/res/layout/item_ctvc.xml
+++ b/app/src/main/res/layout/item_ctvc.xml
@@ -9,6 +9,7 @@
         android:gravity="center"
         android:layout_width="wrap_content"
         android:layout_weight="1"
+        android:background="@drawable/boderblack"
         android:layout_height="match_parent"
         android:orientation="horizontal">
         <TextView
@@ -40,7 +41,9 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="@drawable/boderblack">
+
         <ImageView
             android:id="@+id/btnDelete"
             android:layout_width="match_parent"
