--- a/app/src/main/res/layout/item_dsvt.xml
+++ b/app/src/main/res/layout/item_dsvt.xml
@@ -5,6 +5,10 @@
     xmlns:tool="http://schemas.android.com/tools"
     android:background="#A5DDF6"
     android:orientation="horizontal">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/boderblack">
     <ImageView
         android:id="@+id/imHinh"
         android:layout_width="180dp"
@@ -53,5 +57,6 @@
             android:layout_gravity="center"
             android:src="@android:drawable/ic_delete"
             />
+    </LinearLayout>
     </LinearLayout>
 </LinearLayout>
